# N-body-simulation

./: CMakeLists.txt  Docker-build.md  Dockerfile  README.md  build.sh  config.json  n-body-simulation
Voyager II/: Lab4  Lab4_edited  Lab4_edited.cpp  Untitled-1.cpp  Voyagercorr  Voyagercorr.cpp  animazione.gp  horizons_results (1).txt  horizons_results (2).txt  horizons_results (3).txt  horizons_results.txt  simulazione
Voyager II/animazione/: animazione.py
Voyager II/animazione/nocorr-360s/: Thumbs.db
Voyager_simulator_revised/: Simulation
Voyager_simulator_revised/simulator/: Particle.hpp  System.cpp  System.hpp  Utils.cpp  Utils.hpp  main.cpp
animation/: plot_2d_animation.py
nsys-reports/: report1.nsys-rep  report3.nsys-rep
presentation/: history.md  mermaid_chart.mmd
presentation/beamer/: beamercolorthemeUnipd.sty  beamerfontthemeUnipd.sty  beamerinnerthemeUnipd.sty  beamerouterthemeUnipd.sty  beamerthemeUnipd.sty  presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc
presentation/benchmarks/: BarnesHut_vs_GPU_analysis.ipynb  CPU_methods_scaling_analysis.ipynb  GPU_benchmark_analysis.ipynb  benchmark_ana_high.ipynb  benchmark_analysis.ipynb  benchmark_analysis_GPU_mt.ipynb  benchmark_results_CPU_GPU.csv  benchmark_results_CPU_GPU_2.csv  benchmark_results_CPU_GPU_3.csv  benchmark_results_CPU_bh.csv  benchmark_results_CPU_bh_2.csv  benchmark_results_CPU_bh_3.csv  benchmark_results_CPU_methods.csv  benchmark_results_CPU_methods_2.csv  benchmark_results_GPU_blocksize.csv  benchmark_results_GPU_blocksize_2.csv  benchmark_results_GPU_blocksize_3.csv  benchmark_results_GPU_heuristic.csv  benchmark_results_GPU_heuristic_2.csv  benchmark_results_GPU_high.csv  benchmark_results_GPU_high_2.csv  benchmark_results_GPU_mt.csv  benchmark_results_GPU_occupancyAPI.csv  benchmark_results_GPU_occupancyAPI_2.csv
presentation/theory behind the choices/: # Atomic Operations vs.md
project_n_body/base_sim/: bin
project_n_body/base_sim/data_out/: simulation_data_box.txt
project_n_body/base_sim/simulator/: Initializer.cpp  Initializer.hpp  Particle.hpp  System.cpp  main.cpp
project_n_body/base_sim_pragma/: bin  notebook.ipynb
project_n_body/base_sim_pragma/simulator/: System.cpp  System.hpp  Utils.cpp  Utils.hpp  main.cpp
simulator/core/: ConfigParser.hpp  ExecutionModes.hpp  Forces.cpp  Forces.hpp  Initializer.cpp  Initializer.hpp  Particles.hpp  README-core.md  System.cpp  System.hpp  main.cpp
simulator/cuda/: BHKernels2.cu  BHKernels2.cuh  BenchmarkKernels.cu  BenchmarkKernels.h  Constants.cu  Constants.cuh  CudaUtils.cu  CudaUtils.cuh  ForceKernels.cu  ForceKernels.cuh  IntegrationKernels.cu  IntegrationKernels.cuh  README-cuda.md  SimulationKernels.cu  SimulationKernels.h
simulator/output/: OutputData.hpp  OutputModes.hpp  OutputUtils.cpp  OutputUtils.hpp  README-output.md
simulator/visualization/: CameraController.cpp  CameraController.h  ParticleRenderer.cpp  ParticleRenderer.h  README-visualization.md  ShaderManager.cpp  ShaderManager.h  VisualizationUtils.cpp  VisualizationUtils.h
simulator/visualization/cuda/: VisualizationKernels.cu  VisualizationKernels.h
